# jsdefrag_evo

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  JkDefrag.sln  JkDefrag2008.sln  README.md
JkDefrag/: JkDefrag2008.vcxproj  JkDefrag2008.vcxproj.filters
JkDefrag/Resource/: JkDefrag.rc  RCa04900
JkDefrag/Source/: Constants.h  Defrag.cpp  Defrag.h  DefragGui.h  DefragLib.h  DefragStruct.cpp  DefragStruct.h  JKDefragLog.cpp  JkDefragGui.cpp  JkDefragLib.cpp  ScanFat.cpp  ScanFat.h  ScanNtfs.cpp  ScanNtfs.h  StdAfx.h  defrag_data_struct.h  defrag_gui.cpp  defrag_gui.h  defrag_gui_colormap.cpp  defrag_lib.cpp  defrag_lib.h  defrag_lib_finding.cpp  defrag_lib_methods.cpp  defrag_lib_moving.cpp  defrag_lib_scan.cpp  defrag_lib_tree.cpp  defrag_log.cpp  defrag_log.h  defrag_struct.cpp  defrag_struct.h  itemstruct.cpp  itemstruct.h  main.cpp  precompiled_header.h  printing.cpp  printing.h  scan_fat.cpp  scan_fat.h  scan_ntfs.cpp  scan_ntfs.h  (+5 more)
JkDefrag/Source/gui/: colormap.cpp  colormap.h  defrag_gui.cpp  defrag_gui.h  defrag_gui_colormap.cpp  paint.cpp
JkDefrag/Source/tech/: defrag_data_struct.h  defrag_lib.cpp  defrag_lib.h  defrag_lib_finding.cpp  defrag_lib_methods.cpp  defrag_lib_moving.cpp  defrag_lib_scan.cpp  defrag_lib_tree.cpp  defrag_struct.cpp  itemstruct.cpp  itemstruct.h  scan_fat.cpp  scan_fat.h  scan_ntfs.cpp  scan_ntfs.h
JkDefrag/Source/tech/methods/: defrag_mountpoints.cpp  defrag_one_path.cpp  defragment.cpp  fixup.cpp  forced_fill.cpp  optimize_sort.cpp  optimize_up.cpp  optimize_volume.cpp  vacate.cpp
jkdefrag_evo/: JkDefrag2008.vcxproj  JkDefrag2008.vcxproj.filters
jkdefrag_evo/Manifest/: JkDefrag.manifest
jkdefrag_evo/Resource/: JkDefrag.rc
jkdefrag_evo/include/: app.h  colormap.h  constants.h  defrag.h  defrag_data_struct.h  defrag_gui.h  defrag_lib.h  defrag_log.h  defrag_state.h  defrag_struct.h  diskmap.h  diskmap_cell.h  diskmap_color.h  extent.h  file_node.h  itemstruct.h  mem_util.h  numeral.h  precompiled_header.h  printing.h  runner.h  scan_fat.h  scan_ntfs.h  str_util.h  time_util.h  tree.h  types.h
jkdefrag_evo/include/result/: README.md  result.h
jkdefrag_evo/resource/: jkdefrag.rc  resource.h
jkdefrag_evo/src/: Defrag.cpp  app.cpp  app_debug.cpp  defrag.cpp  defrag_log.cpp  main.cpp  precompiled_header.cpp  printing.cpp  str_util.cpp  time_util.cpp
jkdefrag_evo/src/gui/: colormap.cpp  defrag_gui.cpp  diskmap.cpp  paint.cpp  stats.cpp
jkdefrag_evo/src/tech/: defrag_data_struct.cpp  defrag_lib.cpp  defrag_lib_finding.cpp  defrag_lib_methods.cpp  defrag_lib_moving.cpp  defrag_lib_scan.cpp  defrag_struct.cpp  file_node.cpp  itemstruct.cpp  runner.cpp  scan_fat.cpp  scan_ntfs.cpp
jkdefrag_evo/src/tech/defrag/: analyze.cpp  defrag_state.cpp  finding.cpp  move_mft.cpp  moving.cpp  scan.cpp  volume_bitmap.cpp  volume_bitmap.h
jkdefrag_evo/src/tech/fat/: analyze.cpp  directory.cpp  fat_analyze.cpp  fat_directory.cpp  fat_scan.cpp  scan_fat.cpp
jkdefrag_evo/src/tech/methods/: defrag_mountpoints.cpp  defrag_one_path.cpp  defragment.cpp  fixup.cpp  forced_fill.cpp  optimize_sort.cpp  optimize_up.cpp  optimize_volume.cpp  vacate.cpp
jkdefrag_evo/src/tech/ntfs/: analyze.cpp  attributes.cpp  mft.cpp  ntfs_analyze.cpp  ntfs_attributes.cpp  ntfs_mft.cpp  ntfs_scan.cpp  ntfs_stream.cpp  scan_ntfs.cpp  stream.cpp
jkdefrag_evo/src/util/: str_util.cpp  time_util.cpp
